scenarios/canary-deployment/route-reviews-to-v2-and-v3.yaml
# V3 in development, we want developers to be able to reach it
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v2
        weight: 50
      - destination:
          host: reviews
          subset: v3
        weight: 50
