scenarios/canary-deployment/route-reviews-to-v2-dev-v3.yaml
# V3 in development, we want developers to be able to reach it
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - match:
        - headers:
            end-user:
              exact: development
      route:
        - destination:
            host: reviews
            subset: v3
    - route:
      - destination:
          host: reviews
          subset: v2
