scenarios/canary-deployment/route-reviews-to-v2.yaml
# Scenario 2 start: reviews v2 fully developed and in use
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: reviews
spec:
  hosts:
    - reviews
  http:
    - route:
      - destination:
          host: reviews
          subset: v2
